app/assets/stylesheets/_profile.scss
.submit-profile-changes {
  @media(screen and max-width: 24em) {
    flex: 1;
  }
}

.options {
  &:not(:first-child) {
    margin-top: $base-spacing;
  }
}

.option {
  align-items: flex-start;
  display: flex;

  &:not(:last-child) {
    margin-bottom: $small-spacing;
  }
}

.option-icon {
  color: $medium-grey;
  margin: 0.5em $base-spacing 0.5em 0;
}

.option-name {
  flex: 1;
  padding-top: 0.5em;
}

@media(screen and min-width: $line-width) {
  .options {
    padding-left: 3.5rem;
  }

  .oauth-accounts h3,
  .oauth-accounts p {
    padding-left: 6.5rem;
  }

  .oauth-account-options {
    display: flex;
    justify-content: space-between;
    margin-left: 3rem;

    .button {
      margin-left: $base-spacing;
    }
  }

  .profile-form {
    display: grid;
    grid-column-gap: $base-spacing;
    grid-template-areas:
      "avatar details"
      "buttons buttons";
    grid-template-columns: auto 1fr;

    .profile-avatar {
      grid-area: avatar;
      padding-top: $base-spacing;
    }

    .profile-details {
      grid-area: details;
    }

    .form-buttons {
      grid-area: buttons;
    }
  }
}

.profile-avatar {
  label {
    font-size: 100%;
    margin: 0 auto $small-spacing;
    position: relative;
    width: 5em;
  }

  .avatar {
    @include size(5em);
    background: $light-grey;
    color: rgba($white, 0.5);

    .icon {
      transition: opacity $base-duration $base-timing;
    }
  }

  .profile-avatar-upload {
    @include position(absolute, 0 0 0 0);
    @include center-content;
    background: rgba($dark-grey, 0.5);
    border-radius: 50%;
    color: $white;
    cursor: pointer;
    opacity: 0;
    transition: opacity $base-duration $base-timing;
    z-index: 1;

    &:hover {
      opacity: 1;

      + .avatar .icon {
        opacity: 0;
      }
    }
  }

  .upload-progress {
    @include position(absolute, 0 0 0 0);
    z-index: 2;
    pointer-events: none;
    touch-action: none;
    --progress: 0;

    path {
      fill: none;
      stroke: $action-color;
      stroke-width: 4px;
      stroke-dasharray: 100;
      stroke-dashoffset: calc(100 - var(--progress));
    }
  }

  input {
    display: none;
  }
}

